# crengine-ng

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  README.md  crengine-ng-config.h.cmake
crengine/: .clang-format  CMakeLists.txt  _clang_format.sh  crengine-ng-config.cmake.in  crengine-ng-config.h.cmake  crengine-ng.pc.cmake
crengine/Tools/: CMakeLists.txt
crengine/Tools/Fb2Linux/: CMakeLists.txt  fb2v.cpp  xutils.cpp  xutils.h
crengine/Tools/GammaGen/: gammagen.cpp  gammagen.pl
crengine/Tools/HyphConv/: CMakeLists.txt  mkpattern.cpp  mkpattern.pl
crengine/Tools/HyphConv2/: mkpattern2.pl
crengine/Tools/HyphDumper/: CMakeLists.txt  main.cpp  my_hyphpatternreader.cpp  my_hyphpatternreader.h  my_texhyph.cpp  my_texhyph.h  my_texpattern.cpp  my_texpattern.h
crengine/Tools/blend-algo-test/: CMakeLists.txt  blend_over_gray_test.c  blend_over_rgb_test.c
crengine/Tools/gen_mathml/: gen_mathml_operators_h.py
crengine/Tools/gentoo/: crengine-ng-x.y.z.ebuild
crengine/Tools/getauthors/: getauthors.sh
crengine/Tools/glyphcache_bench/: CMakeLists.txt  lvfontglyphcache_a.cpp  lvfontglyphcache_a.h  lvfontglyphcache_b.cpp  lvfontglyphcache_b.h  main.cpp
crengine/Tools/langstat/: CMakeLists.txt  langstat.cpp
crengine/Tools/langstat2/: CMakeLists.txt  langstat.cpp
crengine/Tools/wtf8-test/: CMakeLists.txt  main.cpp
crengine/Tools/zip-test/: CMakeLists.txt  main.cpp
crengine/data/css/: epub.css  fb2.css  markdown.css
crengine/data/hyph/: Armenian.pattern  Basque.pattern  Bulgarian.pattern  Catalan.pattern  Croatian.pattern  Czech.pattern  Danish.pattern  Dutch.pattern  English_GB.pattern  English_US.pattern  Esperanto.pattern  Estonian.pattern  Finnish.pattern  French.pattern  Friulian.pattern  Galician.pattern  Georgian.pattern  German.pattern  Greek.pattern  Hungarian.pattern  Icelandic.pattern  Irish.pattern  Italian.pattern  Latin.pattern  Latin_liturgical.pattern  Latvian.pattern  Lithuanian.pattern  Macedonian.pattern  Norwegian.pattern  Occitan.pattern  Piemontese.pattern  Polish.pattern  Portuguese.pattern  Portuguese_BR.pattern  Romanian.pattern  Romansh.pattern  Russian.pattern  Russian_EnGB.pattern  Russian_EnUS.pattern  Serbian.pattern  (+60 more)
crengine/doxygen/: Doxyfile
crengine/include/: bookformats.h  crbookformats.h  crconcurrent.h  crengine.h  crgui.h  crhist.h  crhyphman.h  cri18n.h  crlocaledata.h  crlocks.h  crlog.h  crmathml.h  crprops.h  crsetup.h  crskin.h  crtest.h  crtimerutil.h  crtrace.h  crtxtenc.h  cssdef.h  dtddef.h  fb2def.h  hist.h  hyphman.h  ldomdoccache.h  ldomdocument.h  ldommarkedrange.h  ldommarkedrangelist.h  ldomnavigationhistory.h  ldomnode.h  ldomnodecallback.h  ldomword.h  ldomwordex.h  ldomwordexlist.h  ldomxpointer.h  ldomxpointerex.h  ldomxrange.h  ldomxrangelist.h  lstridmap.h  lvarray.h  (+58 more)
crengine/src/: bookformats.cpp  chmfmt.cpp  chmfmt.h  cp_stats.cpp  cp_stats.h  crbookformats.cpp  crconcurrent.cpp  crgui.cpp  crhist.cpp  crhyphman.cpp  cri18n.cpp  crlog.cpp  crmathml.cpp  crprops.cpp  crskin.cpp  crtest.cpp  crtxtenc.cpp  docxfmt.cpp  docxfmt.h  epubfmt.cpp  epubfmt.h  fb3fmt.cpp  fb3fmt.h  hist.cpp  hyphman.cpp  lstridmap.cpp  lvbmpbuf.cpp  lvdocview.cpp  lvmemman.cpp  lvopc.cpp  lvopc.h  lvpagesplitter.cpp  lvrend.cpp  lvserialbuf.cpp  lvstring.cpp  lvstring32collection.cpp  lvstring32hashedcollection.cpp  lvstring8collection.cpp  lvstsheet.cpp  lvstyles.cpp  (+33 more)
crengine/src/encodings/: ksc5601.h
crengine/src/locale_data/: crlocaledata.cpp  fc-lang-data.c
crengine/src/lvdrawbuf/: lvbasedrawbuf.cpp  lvcolordrawbuf.cpp  lvdrawbuf_utils.cpp  lvdrawbuf_utils.h  lvdrawstatesaver.h  lvgraydrawbuf.cpp  lvimagescaleddrawcallback.cpp  lvimagescaleddrawcallback.h  lvinkmeasurementdrawbuf.cpp  lvinkmeasurementdrawbuf.h
crengine/src/lvfont/: gammatbl.h  lvbasefont.cpp  lvbasefont.h  lvbitmapfont.cpp  lvbitmapfont.h  lvbitmapfontman.cpp  lvbitmapfontman.h  lvembeddedfont.cpp  lvfnt.cpp  lvfntman.cpp  lvfont.cpp  lvfontboldtransform.cpp  lvfontboldtransform.h  lvfontcache.cpp  lvfontcache.h  lvfontdef.cpp  lvfontdef.h  lvfontglyphcache.cpp  lvfontglyphcache.h  lvfreetypeface.cpp  lvfreetypeface.h  lvfreetypefontman.cpp  lvfreetypefontman.h  lvgammacorrection.cpp  lvgammacorrection.h  lvgammatbl.c  lvgammatbl.h  lvwin32font.cpp  lvwin32font.h  lvwin32fontman.cpp  lvwin32fontman.h
crengine/src/lvimg/: clzwdecoder.cpp  clzwdecoder.h  crninepatchdecoder.cpp  crninepatchdecoder.h  lvalphatransformimgsource.cpp  lvalphatransformimgsource.h  lvcacheableobject.cpp  lvcolortransformimgsource.cpp  lvcolortransformimgsource.h  lvdrawbufimgsource.cpp  lvdrawbufimgsource.h  lvdummyimagesource.h  lvgifframe.cpp  lvgifframe.h  lvgifimagesource.cpp  lvgifimagesource.h  lvimagedecodercallback.h  lvimagesource.cpp  lvimg.cpp  lvjpegimagesource.cpp  lvjpegimagesource.h  lvnodeimagesource.h  lvpngimagesource.cpp  lvpngimagesource.h  lvstretchimgsource.cpp  lvstretchimgsource.h  lvsvgimagesource.cpp  lvsvgimagesource.h  lvunpackedimgsource.cpp  lvunpackedimgsource.h  lvxpmimagesource.cpp  lvxpmimagesource.h
crengine/src/lvstream/: lvarccontainerbase.h  lvbase64stream.cpp  lvbase64stream.h  lvblockwritestream.cpp  lvblockwritestream.h  lvcachedstream.cpp  lvcachedstream.h  lvcommoncontaineriteminfo.h  lvfilestream.h  (+24 more)
crengine/tests/: CMakeLists.txt  README.txt  blockwritecache_tests.cpp  calc-drawbuf-diff.cpp  calc-drawbuf-diff.h  compare-two-binfiles.cpp  compare-two-binfiles.h  compare-two-textfiles.cpp  compare-two-textfiles.h  crengine-ng-environment.cpp  docparse_tests.cpp  docview_funcs_tests.cpp  fontman_funcs_tests.cpp  hyph_tests.cpp  localenames_tests.cpp  lvtinydom_cachefile.h  lvtinydom_private.h  make-rand-file.cpp  make-rand-file.h  savetobmp.cpp  savetobmp.h  streamutils_tests.cpp  tests_blockwritecache.cpp  tests_bm_title.cpp  tests_doc_props.cpp  tests_doc_with_base64_img.cpp  tests_docparse.cpp  tests_docview_funcs.cpp  tests_formating.cpp  tests_localenames.cpp  tests_props.cpp  tests_textrender.cpp  tests_tinydom.cpp  tests_wtf8.cpp  textrender_tests.cpp  tinydom_tests.cpp  wtf8_tests.cpp  zip-use_tests.cpp
(+96 files in other folders)
